More dark mode fixes

--- a/src/_global.scss
+++ b/src/_global.scss
@@ -16,6 +16,7 @@ body {
 }
 .dark {
     body {
-        background-color: $body-bg-dark;
+        background-color: $body-bg-dark!important;
+        color: $text-color-dark!important;
     }
 }
