--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,10 +4,16 @@ $text-muted-color: #6c757d;
 $mobile-max-width: 992px;
 $navbar-background-light: #523d33;
 $text-color: #212529;
+$welcome-title-light: rgb(39, 33, 33);
+$welcome-text-light: #635e69;
+
 
 $body-bg-dark: #171c28;
 $navbar-background-dark: #0c101b;
 $primary-color-dark: #0bdcef;
 $text-muted-color-dark: #c8c8c8;
+$text-color-dark: #ffffff;
+$welcome-title-dark: rgb(245, 239, 239);
+$welcome-text-dark: rgb(221, 195, 195);
 
 $navbar-links-color: #ffffff;
